basic website layout

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
             </ul>
         </div>
         <div class="two common">
-            <h1>this is second division</h1>
+         <center>
+            <img src="sac_logo.png
+            " alt="">
+         </center>
         </div>
         <div class="three common">
            <center>
@@ -31,7 +34,11 @@
             <h1>this is fourth division</h1>
         </div>
         <div class="five common">
-            <h1>this is fifth division</h1>
+          <center>
+            <h3>Koneru Lakshmaiah Education Foundation <br>Student Acitivity Center</h3>
+
+            <p>Copyright by Coding School & Developed by Deepak Reddy Gathpa</p>
+          </center>
         </div>
     </div>
 </body>
