--- a/index.html
+++ b/index.html
@@ -31,7 +31,28 @@
            </center>
         </div>
         <div class="four common">
-            <h1>this is fourth division</h1>
+           <center>
+            <h1>Wings at Coding School</h1>
+           </center>
+
+           <div class="wingnames">
+            <div class="wing">
+                <h3>Programming and Algorithms Group</h3>
+            </div>
+            <div class="wing">
+                <h3>Competitive Coding</h3>
+            </div>
+            <div class="wing">
+                <h3>Web Development</h3>
+            </div>
+            <div class="wing">
+                <h3>Open Source Software Development</h3>
+            </div>
+            <div class="wing">
+                <h3>IACC | DevOps</h3>
+            </div>
+           </div>
+
         </div>
         <div class="five common">
           <center>
