common navigation created

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <div class="one common">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">More</a></li>
-                <li><a href="#">Help</a></li>
+                <li><a href="About.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="more.html">More</a></li>
+                <li><a href="help.css">Help</a></li>
             </ul>
         </div>
         <div class="two common">
