wrap for 9th march

--- a/About.html
+++ b/About.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <div class="container">
+
+        <!-- this is first division -->
         <div class="one common">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -18,6 +20,25 @@
                 <li><a href="#">Help</a></li>
             </ul>
         </div>
+
+        <div class="two">
+            <div class="two-inner">
+               <center>
+                <h2>About Coding School</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime magnam eaque commodi error dolore cumque vel quis unde odio, dignissimos atque reprehenderit! Non incidunt quo, consequatur, minima quia inventore voluptas maxime suscipit tempora ducimus totam! Maiores quas voluptate deserunt impedit veritatis excepturi doloribus quidem velit. Dolores libero, sed deserunt sunt neque ut. Sapiente, esse debitis similique facere laborum, inventore minus saepe, aperiam ea obcaecati placeat omnis rerum libero ad? Placeat neque sed, vero voluptatem laboriosam illum doloribus, ut quisquam quos, amet doloremque reiciendis quod voluptate quasi aut at eaque ea fugit error facilis facere? Corrupti iure temporibus et velit ea!</p>
+               </center>
+            </div>
+        </div>
+
+
+        <!-- this is fith division -->
+        <div class="five common">
+            <center>
+              <h3>Koneru Lakshmaiah Education Foundation <br>Student Acitivity Center</h3>
+  
+              <p>Copyright by Coding School & Developed by <a href="https://github.com/DeepakReddyG"> Deepak Reddy Gathpa </a></p>
+            </center>
+          </div>
     </div>
 </body>
 </html>
