--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <div class="container">
+
+        <!-- this is first division -->
         <div class="one common">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -18,6 +20,25 @@
                 <li><a href="help.html">Help</a></li>
             </ul>
         </div>
+
+        <div class="two">
+            <div class="two-inner">
+                <h3>Koneru Lakshmaiah Education Foundation</h3>
+                <h4>Student Activity Center</h4>
+                <p>codingschool@kluniversity.in</p>
+                <p>+91 1234567890</p>
+                <p>Vaddeshwaram, Vijayawada, Andharapradesh</p>
+            </div>
+        </div>
+
+        <!-- this is fifth division -->
+        <div class="five common">
+            <center>
+              <h3>Koneru Lakshmaiah Education Foundation <br>Student Acitivity Center</h3>
+  
+              <p>Copyright by Coding School & Developed by <a href="https://github.com/DeepakReddyG"> Deepak Reddy Gathpa </a></p>
+            </center>
+          </div>
     </div>
 </body>
 </html>
