--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <center>
             <h3>Koneru Lakshmaiah Education Foundation <br>Student Acitivity Center</h3>
 
-            <p>Copyright by Coding School & Developed by Deepak Reddy Gathpa</p>
+            <p>Copyright by Coding School & Developed by <a href="https://github.com/DeepakReddyG"> Deepak Reddy Gathpa </a></p>
           </center>
         </div>
     </div>
