--- a/more.html
+++ b/more.html
@@ -18,6 +18,13 @@
                 <li><a href="help.html">Help</a></li>
             </ul>
         </div>
+        <div class="five common">
+            <center>
+              <h3>Koneru Lakshmaiah Education Foundation <br>Student Acitivity Center</h3>
+  
+              <p>Copyright by Coding School & Developed by <a href="https://github.com/DeepakReddyG"> Deepak Reddy Gathpa </a></p>
+            </center>
+          </div>
     </div>
 </body>
 </html>
